# http/request/auth.go
@@ -2,8 +2,10 @@ package request
 
 type SignUpUsernameRequest struct {
 	BaseRequest
-	Username string `json:"username" example:"zhuyan"`         //用户名
-	Password string `json:"password" exmample:"123456@Zhuyan"` //密码，需要包含大小写数字和特殊字符
+	Username   string `json:"username" binding:"required" example:"zhuyan"`         //用户名
+	Password   string `json:"password" binding:"required" exmample:"123456@Zhuyan"` //密码，需要包含大小写数字和特殊字符
+	Phone      string `json:"phone" binding:"required" example:"18391025131"`       //用户名
+	VerifyCode string `json:"verify_code" binding:"required" exmample:"637522"`     //验证码
 }
 
 type SignInUsernameRequest struct {
@@ -20,7 +22,6 @@ type SignUpSMSRequest struct {
 }
 type SignInSMSRequest struct {
 	BaseRequest
-	Phone      string `json:"phone" example:"18391025131"`       //用户名
-	Password   string `json:"password" exmample:"123456@Zhuyan"` //密码，需要包含大小写数字和特殊字符
-	VerifyCode string `json:"verify_code" exmample:"637522"`     //验证码
+	Phone      string `json:"phone" example:"18391025131"`   //用户名
+	VerifyCode string `json:"verify_code" exmample:"637522"` //验证码
 }
